<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="500dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_gravity="center"
    app:cardElevation="4dp"
    tools:context=".ui.dialogs.DialogAboutGame">

    <LinearLayout
        android:background="@drawable/fired_tank"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/war"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/l_menu"
            app:cornerRadius="10dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/white"
            android:text="@string/menu"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/l_restart"
            app:cornerRadius="10dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/white"
            android:text="@string/restart"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:text="@string/loosing"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>