<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/dialogmenu"
        android:layout_width="match_parent"
        android:layout_gravity="center|center_horizontal"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/pause"
            android:textSize="28sp"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resume"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/resume"
            android:textSize="28sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            app:cornerRadius="10dp"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/restart"
            android:backgroundTint="@android:color/transparent"
            android:layout_gravity="center"
            android:text="@string/restart"
            android:textSize="28sp"
            android:layout_marginTop="20dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/white"
            app:cornerRadius="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit"
            android:backgroundTint="@android:color/transparent"
            android:layout_gravity="center"
            android:text="@string/exit"
            android:textSize="28sp"
            android:layout_marginTop="20dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>