<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:layout_gravity="center"
    android:layout_width="500dp"
    android:layout_height="300dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/victory"
        android:layout_width="match_parent"
        android:layout_gravity="center|center_horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="30dp"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/congratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/v_score"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/v_menu"
            android:layout_gravity="center"
            android:text="@string/menu"
            app:strokeWidth="2dp"
            app:strokeColor="@color/white"
            android:layout_marginTop="20dp"
            app:cornerRadius="10dp"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            android:backgroundTint="@android:color/transparent"
            app:cornerRadius="10dp"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>